<resources>
    <string name="app_name">Brain Training Game</string>
    <string name="game">Game</string>
    <string name="menu_play">Play</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_author">Author</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>

    <string name="game_button_zero">0</string>
    <string name="game_button_one">1</string>
    <string name="game_button_two">2</string>
    <string name="game_button_three">3</string>
    <string name="game_button_four">4</string>
    <string name="game_button_five">5</string>
    <string name="game_button_six">6</string>
    <string name="game_button_seven">7</string>
    <string name="game_button_eight">8</string>
    <string name="game_button_nine">9</string>
    <string name="game_button_delete">Delete</string>
    <string name="game_button_sign">-</string>
    <string name="game_button_check">Check</string>
    <string name="game_button_next">Next</string>

    <!-- Labels for the difficulty preference -->
    <string name="pref_difficulty_label">Difficulty</string>
    <string name="pref_difficulty_easy_label">Easy</string>
    <string name="pref_difficulty_medium_label">Medium</string>
    <string name="pref_difficulty_hard_label">Hard</string>

    <!-- Key name for storing difficulty level in -->
    <string name="pref_difficulty_key" translatable="false">difficulty</string>

    <!-- Default difficulty preference -->
    <string name="pref_difficulty_default" translatable="false">2</string>

    <string name="pref_difficulty_1" translatable="false">1</string>
    <string name="pref_difficulty_2" translatable="false">2</string>
    <string name="pref_difficulty_3" translatable="false">3</string>

    <string name="correct_answer">Correct!</string>
    <string name="wrong_answer">Wrong!</string>
    <string name="correct_answers">Correct answers</string>
    <string name="game_finished">Game is finished</string>
    <string name="click_score">Click score</string>
    <string name="score">Score</string>

    <string name="rules">Rules</string>
    <string name="rules_text">This is a basic brain training game, which will be asking the user to
        calculate the answer to various simple arithmetic expressions. The user is presented with
        three levels of game difficulty: Easy, Medium, Hard. Clicking on each one of them sets the
        maximum number of terms involved in the arithmetic expression that the user needs to calculate.
    The Easy level corresponds to an arithmetic expression involving exactly 2 integers. The Medium
        level corresponds to an arithmetic expression with 3 terms. The Hard level corresponds to an
        arithmetic expression with 4 terms. After the user sets the difficulty level, by clicking on
        one of the 3 levels, the user is presented with the main game screen which contains a random
        (not fixed or hardcoded but randomly generated by the program itself) arithmetic expression
        among integers, based on the difficulty level he/she has chosen. The arithmetic expression
        includes random mixed operations utilising addition, subtraction, multiplication and division.
    In total, for a single game, the user will be presented and asked to guess 10 different arithmetic
        expressions. In the end of each game (after 10 arithmetic expressions), the user will be
        displayed with a score which the sum of the points scored in each question. The score will
        take into account how fast the user answered the question.</string>

    <string name="author_text">Hello! My name is Kostya. I created this application as final project
        for Android Study Jams 2016 course organized by Udacity and Google Developer Group Lviv. You
        can find more information about me on these links.</string>
</resources>
