<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <TextView
        android:id="@+id/evaluation_text_view"
        style="@style/GameTextView" />

    <TextView
        android:id="@+id/expression_text_view"
        style="@style/GameTextView" />

    <TextView
        android:id="@+id/answer_text_view"
        style="@style/GameTextView" />

    <TextView
        android:id="@+id/timer_text_view"
        style="@style/GameTextView" />

    <TableLayout
        android:id="@+id/buttons_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:id="@+id/button_one"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_one" />

            <Button
                android:id="@+id/button_two"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_two" />

            <Button
                android:id="@+id/button_three"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_three" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_four"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_four" />

            <Button
                android:id="@+id/button_five"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_five" />

            <Button
                android:id="@+id/button_six"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_six" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_seven"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_seven" />

            <Button
                android:id="@+id/button_eight"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_eight" />

            <Button
                android:id="@+id/button_nine"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_nine" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_delete"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_delete" />

            <Button
                android:id="@+id/button_zero"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_zero" />

            <Button
                android:id="@+id/button_sign"
                style="@style/TableLayoutGameButton"
                android:text="@string/game_button_sign" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/game_button_check"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_font_medium"
        android:textStyle="bold" />
</TableLayout>