<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/menu_play_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/menu_play"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_font_short" />

        <Button
            android:id="@+id/menu_rules_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/menu_rules"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_font_short" />

        <Button
            android:id="@+id/menu_author_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/menu_author"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_font_short" />

        <Button
            android:id="@+id/menu_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/menu_settings"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_font_short" />

        <Button
            android:id="@+id/menu_exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/menu_exit"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_font_short" />

    </LinearLayout>
</RelativeLayout>
